[package]
name = "vdfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.3.5", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml =  "0.9"
